--- a/src/BookingProject/FlightBooking/FlightBooking.csproj
+++ b/src/BookingProject/FlightBooking/FlightBooking.csproj
@@ -65,7 +65,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Contact.aspx" />
+    <Content Include="Models\Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -85,6 +85,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Assets\Icon.png" />
+    <Content Include="Models\SelectionVol.aspx" />
     <Content Include="packages.config" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -99,8 +100,8 @@
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\npm.js" />
-    <Content Include="Test.aspx" />
-    <Content Include="Travel.aspx" />
+    <Content Include="Models\Test.aspx" />
+    <Content Include="Models\Travel.aspx" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-2.1.3.min.map" />
   </ItemGroup>
@@ -110,11 +111,11 @@
     <Compile Include="Booking\DemandeVol.cs" />
     <Compile Include="Booking\Hotel.cs" />
     <Compile Include="Booking\Vol.cs" />
-    <Compile Include="Contact.aspx.cs">
+    <Compile Include="Models\Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Contact.aspx.designer.cs">
+    <Compile Include="Models\Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
@@ -134,25 +135,32 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\SelectionVol.aspx.cs">
+      <DependentUpon>SelectionVol.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Models\SelectionVol.aspx.designer.cs">
+      <DependentUpon>SelectionVol.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test.aspx.cs">
+    <Compile Include="Models\Test.aspx.cs">
       <DependentUpon>Test.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Test.aspx.designer.cs">
+    <Compile Include="Models\Test.aspx.designer.cs">
       <DependentUpon>Test.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Travel.aspx.cs">
+    <Compile Include="Models\Travel.aspx.cs">
       <DependentUpon>Travel.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Travel.aspx.designer.cs">
+    <Compile Include="Models\Travel.aspx.designer.cs">
       <DependentUpon>Travel.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Routing.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
