--- a/src/BookingProject/WindowsFormsApplication1/LireMSMQ.csproj
+++ b/src/BookingProject/WindowsFormsApplication1/LireMSMQ.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>091bb6c7-d76b-4656-9aee-94df861de0de</ProjectGuid>
+    <ProjectGuid>{68543CBF-206F-4472-B34A-56D759422F81}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WindowsFormsApplication1</RootNamespace>
