Probleme cast librairies fixé

--- a/src/BookingProject/lib_Vols/lib_Vols.csproj
+++ b/src/BookingProject/lib_Vols/lib_Vols.csproj
@@ -40,6 +40,7 @@
     <AssemblyOriginatorKeyFile>lib_Vols.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.EnterpriseServices" />
@@ -51,9 +52,6 @@
   <ItemGroup>
     <Compile Include="clsVols.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="lib_Vols.snk" />
