Ajout des références de service pour l'UI + utilisation des webservices

--- a/src/BookingProject/FlightBooking/Web.config
+++ b/src/BookingProject/FlightBooking/Web.config
@@ -8,4 +8,24 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="WSVolsSoap" />
+        <binding name="WSHotelsSoap" />
+        <binding name="WSCommandesSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:54000/WSVols.asmx" binding="basicHttpBinding"
+        bindingConfiguration="WSVolsSoap" contract="ServiceVols.WSVolsSoap"
+        name="WSVolsSoap" />
+      <endpoint address="http://localhost:54932/WSHotels.asmx" binding="basicHttpBinding"
+        bindingConfiguration="WSHotelsSoap" contract="ServiceHotels.WSHotelsSoap"
+        name="WSHotelsSoap" />
+      <endpoint address="http://localhost:54933/WSCommandes.asmx" binding="basicHttpBinding"
+        bindingConfiguration="WSCommandesSoap" contract="ServiceCommandes.WSCommandesSoap"
+        name="WSCommandesSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
