Ajout référence webService Vols

--- a/src/BookingProject/FlightBooking/Web.config
+++ b/src/BookingProject/FlightBooking/Web.config
@@ -4,6 +4,11 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="FlightBooking.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -28,4 +33,11 @@
         name="WSCommandesSoap" />
     </client>
   </system.serviceModel>
+  <applicationSettings>
+    <FlightBooking.Properties.Settings>
+      <setting name="FlightBooking_ServiceVols_WSVols" serializeAs="String">
+        <value>http://localhost:54000/WSVols.asmx</value>
+      </setting>
+    </FlightBooking.Properties.Settings>
+  </applicationSettings>
 </configuration>
