--- a/src/BookingProject/FlightBooking/FlightBooking.csproj
+++ b/src/BookingProject/FlightBooking/FlightBooking.csproj
@@ -61,6 +61,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Content Include="Models\ConfirmationReservation.aspx" />
+    <Content Include="Models\Paiement.aspx" />
     <Content Include="Web References\ServiceVols\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
@@ -77,7 +79,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Models\Confirmation.aspx" />
+    <Content Include="Models\ConfirmationDemande.aspx" />
     <Content Include="Models\Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -114,24 +116,31 @@
     <Content Include="Scripts\jquery-2.1.3.js" />
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\npm.js" />
-    <Content Include="Models\Test.aspx" />
     <Content Include="Models\Travel.aspx" />
     <None Include="Web References\ServiceVols\WSVols.disco" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-2.1.3.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Booking\CommandHotel.cs" />
-    <Compile Include="Booking\CommandVol.cs" />
+    <Compile Include="Booking\Client.cs" />
+    <Compile Include="Booking\Commande.cs" />
     <Compile Include="Booking\DemandeVol.cs" />
     <Compile Include="Booking\Hotel.cs" />
     <Compile Include="Booking\Vol.cs" />
-    <Compile Include="Models\Confirmation.aspx.cs">
-      <DependentUpon>Confirmation.aspx</DependentUpon>
+    <Compile Include="FlightBookingContext.cs" />
+    <Compile Include="Models\ConfirmationDemande.aspx.cs">
+      <DependentUpon>ConfirmationDemande.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Models\Confirmation.aspx.designer.cs">
-      <DependentUpon>Confirmation.aspx</DependentUpon>
+    <Compile Include="Models\ConfirmationDemande.aspx.designer.cs">
+      <DependentUpon>ConfirmationDemande.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ConfirmationReservation.aspx.cs">
+      <DependentUpon>ConfirmationReservation.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Models\ConfirmationReservation.aspx.designer.cs">
+      <DependentUpon>ConfirmationReservation.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
@@ -157,6 +166,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Paiement.aspx.cs">
+      <DependentUpon>Paiement.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Models\Paiement.aspx.designer.cs">
+      <DependentUpon>Paiement.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Models\SelectionHotel.aspx.cs">
       <DependentUpon>SelectionHotel.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -172,13 +188,6 @@
       <DependentUpon>SelectionVol.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Test.aspx.cs">
-      <DependentUpon>Test.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Models\Test.aspx.designer.cs">
-      <DependentUpon>Test.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Models\Travel.aspx.cs">
       <DependentUpon>Travel.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
