--- a/src/BookingProject/FlightBooking/Web.config
+++ b/src/BookingProject/FlightBooking/Web.config
@@ -38,6 +38,12 @@
       <setting name="FlightBooking_ServiceVols_WSVols" serializeAs="String">
         <value>http://localhost:54000/WSVols.asmx</value>
       </setting>
+      <setting name="FlightBooking_ServiceHotels_WSHotels" serializeAs="String">
+        <value>http://localhost:54932/WSHotels.asmx</value>
+      </setting>
+      <setting name="FlightBooking_ServiceCommandes_WSCommandes" serializeAs="String">
+        <value>http://localhost:54933/WSCommandes.asmx</value>
+      </setting>
     </FlightBooking.Properties.Settings>
   </applicationSettings>
 </configuration>
