--- a/src/BookingProject/FlightBooking/Properties/Settings.settings
+++ b/src/BookingProject/FlightBooking/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="FlightBooking_ServiceVols_WSVols" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost:54000/WSVols.asmx</Value>
     </Setting>
+    <Setting Name="FlightBooking_ServiceHotels_WSHotels" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:54932/WSHotels.asmx</Value>
+    </Setting>
+    <Setting Name="FlightBooking_ServiceCommandes_WSCommandes" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">http://localhost:54933/WSCommandes.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
