--- a/src/BookingProject/serviceCommandes/serviceCommandes.csproj
+++ b/src/BookingProject/serviceCommandes/serviceCommandes.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
